--- a/TODO
+++ b/TODO
@@ -1,13 +1,19 @@
 //ENDPOINTS
 [x] Enroll user to task
 [x] Remove user from task
-[] Check scanned qr code
+[x] Check scanned qr code
 [] Insert scanned item
 [] Archive tasks that are done
 [] Get user archive
 
 //MINOR
+[] Remove tasks from users when employer marks them as done
 [] Set room as active when task starts
 [] Forbid user from deleting team on active task
 [] Forbid user from creating items with same names
 [] Forbid user from creating teams with same names
+[] Send emails to users when they get in team
+[] Send emails to users when their team have been assigned task
+[] Send email to user when he gets banned
+[] Send email to user when he enrolls to the task
+
