--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 [x] Remove user from task
 [x] Check scanned qr code
 [x] Insert scanned item
-[] Archive tasks that are done
+[x] Archive tasks that are done
 [] Get user archive
 
 //MINOR
