--- a/TODO
+++ b/TODO
@@ -19,9 +19,9 @@
 
 
 //TODO
-[] U novu bazu dodati task_id u workers tabeli (za start i end task)
-[] U novu bazu dodati state u scanned_items tabeli (za skeniranje)
-[] U novu bazu dodati worker_id u teams tabeli
+[x] U novu bazu dodati task_id u workers tabeli (za start i end task)
+[x] U novu bazu dodati state u scanned_items tabeli (za skeniranje)
+[x] U novu bazu dodati worker_id u teams tabeli
 [] Kada task postane aktivan, treba uraditi update za sobu isActive na 1 kako se ne bi mogla obrisati soba tokom taska
 [] Zabraniti brisanje tima kada je neki od taskova aktivan gde su oni zaduzeni
 [x] Delete item kada nije generisan qr kod ne radi
@@ -30,7 +30,7 @@
 [] Delete task ukoliko jos uvek nije krenuo ?
 [] Zabraniti pravljenje taska za istu sobu ukoliko vec postoji task
 [] Show logs in admin
-[] Items tabela - vraca Item not found kada se radi update ajtema ali se posalju isti podaci
+[x] Items tabela - vraca Item not found kada se radi update ajtema ali se posalju isti podaci
 [] Mejlovi
 [x] Archive task button (da se pojavi tek kad je poslat response od employera?)
 [x] Pravljenje taska za sobu u kojoj nema ni jedan item ?
