--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
 //MINOR
 [] Remove tasks from users when employer marks them as done
 [] Forbid user from creating items with same names
-[x] Forbid user from creating teams with same names
 [] Send emails to users when they get in team
-[] Send emails to users when their team have been assigned task
+[x] Send emails to users when their team have been assigned task
 [] Send email to user when he gets banned
 [] Send email to user when he enrolls to the task
 
@@ -12,7 +11,6 @@
 [] Cron job za onaj mail
 [] Isti QR kod se vezuje ako je isti item name u razlicitim sobama
 [] Show logs in admin
-[] Mejlovi
 
 [] Mobile app - loader i neki placeholder kada worker nema aktivnih taskova
 [] grafikoni (statistika za index page?)
