--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 //MINOR
 [] Remove tasks from users when employer marks them as done
+[] Send email
 [] Forbid user from creating items with same names
 [] Send emails to users when they get in team
 [] Send email to user when he enrolls to the task
